[package]
name = "to_bopomofo"
version = "0.1.1"
edition = "2021"
description = "Converts a pinyin string to a Bopomofo string."
license = "MIT"
repository = "https://www.github.com/super1207/to_bopomofo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"